--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,8 +8,8 @@ body {
 }
 #header{
   margin-top:10px;
-  height:60px;
-  line-height: 60px;
+  height:40px;
+  line-height: 40px;
 }
 .footer {
   position: absolute;
@@ -17,7 +17,7 @@ body {
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 60px;
-  line-height: 60px; /* Vertically center the text there */
+  padding-bottom:10px;
 }
 .left-controls{
   float:left;
