--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,7 +4,9 @@ html {
 }
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  position: relative;
+  margin: 0;
+  padding-bottom: 6rem;
 }
 #header{
   margin-top:10px;
@@ -13,9 +15,10 @@ body {
 }
 .footer {
   position: absolute;
+  right: 0;
   bottom: 0;
+  left: 0;
   width: 100%;
-  /* Set the fixed height of the footer here */
   height: 60px;
   padding-bottom:10px;
 }
@@ -33,6 +36,7 @@ body {
 }
 #testing-controls{
   width:512px;
+  padding-top:16px;
   display:inline-block;
 }
 #testing-area{
@@ -44,4 +48,10 @@ body {
 }
 #testing-info{
   display:inline-block;
+}
+#game-info{
+  width:512px;
+  float: none;
+  margin:auto;
+  vertical-align: top;
 }
