--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,9 +9,8 @@ body {
   padding-bottom: 6rem;
 }
 #header{
-  margin-top:10px;
-  height:40px;
-  line-height: 40px;
+  margin:1rem;
+  color:#555;
 }
 .footer {
   position: absolute;
@@ -21,6 +20,14 @@ body {
   width: 100%;
   height: 60px;
   padding-bottom:10px;
+  color: #888;
+}
+.heading{
+}
+.content{
+  border-top: .05rem solid #e5e5e5;
+  border-bottom: .05rem solid #e5e5e5;
+  padding:1rem;
 }
 .left-controls{
   float:left;
@@ -54,4 +61,9 @@ body {
   float: none;
   margin:auto;
   vertical-align: top;
+}
+@media screen and (min-width: 48em){
+  .container-narrow{
+      max-width: 46rem;
+  }
 }
