--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,10 +7,9 @@
     <% include ../partials/header %>
     <div class="container container-narrow">
       <div class="content">
-        <div class="jumbotron text-center">
-          <h1 class="display-4">Take me to the test</h1>
+        <div id="jumbotron-main" class="jumbotron text-center">
           <p>
-              <a class="btn btn-lg btn-success" href="/info" role="button">Press here</a>
+              <a class="btn btn-lg btn-secondary" href="/info" role="button">Take me to the test</a>
           </p>
         </div>
         <div class="row">
@@ -21,6 +20,7 @@
             <li><a href="">Course page</a></li>
             <li><a href="">Source code</a></li>
             <li><a href="">Creators website</a></li>
+            <li><a href="">Collected data</a></li>
           </ul>
         </div>
         <div class="col-md-8">
