--- a/views/pages/test.ejs
+++ b/views/pages/test.ejs
@@ -8,6 +8,9 @@
   <body>
     <% include ../partials/header %>
     <div class="container text-center">
+    <div id="test-info-box">
+      Yes this is test <br> yes this is test 2
+    </div>
     <div id="testing" class="mx-auto">
         <div id="testing-controls">
           <div class="left-controls">
