Api communication now works

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -16,11 +16,11 @@
           <div class="col-md-4">
           <h4>Links</h4>
           <ul>
-            <li><a href="">University website</a></li>
-            <li><a href="">Course page</a></li>
-            <li><a href="">Source code</a></li>
-            <li><a href="">Creators website</a></li>
-            <li><a href="">Collected data</a></li>
+            <li><a href="https://www.umu.se/">University website</a></li>
+            <li><a href="https://www.umu.se/utbildning/kurser/student-conference-in-computing-science/">Course page</a></li>
+            <li><a href="https://github.com/isidornygren/synestesic-test">Source code</a></li>
+            <li><a href="http://isidor.co.uk/">Creators website</a></li>
+            <li><a href="exports/exported_data.xlsx">Collected data</a></li>
           </ul>
         </div>
         <div class="col-md-8">
