--- a/views/pages/test.ejs
+++ b/views/pages/test.ejs
@@ -8,7 +8,7 @@
   <body>
     <% include ../partials/header %>
     <div class="container text-center">
-      <p>ID: <%= test_id %>, num: <%= test_num %></p>
+      <p id="token">ID: <%= test_id %>, num: <%= test_num %></p>
     <div id="test-info-box">
       Yes this is test <br> yes this is test 2
     </div>
