--- a/views/pages/test.ejs
+++ b/views/pages/test.ejs
@@ -8,9 +8,7 @@
   <body>
     <% include ../partials/header %>
     <div class="container text-center">
-      <p id="token">ID: <%= test_id %>, num: <%= test_num %></p>
-    <div id="test-info-box">
-      Yes this is test <br> yes this is test 2
+    <div id="test-info-box" style="visibility: hidden">
     </div>
     <div id="testing" class="mx-auto">
         <div id="testing-controls">
@@ -40,9 +38,6 @@
         </div>
       </div>
       <br>
-      <small id="testing-info">
-        x: , y:
-      </small>
     </div>
   </div>
   <% include ../partials/footer %>
