Reclaimed the game render function

--- a/views/pages/test.ejs
+++ b/views/pages/test.ejs
@@ -11,7 +11,7 @@
     <div id="test-info-box" style="visibility: hidden">
     </div>
     <div id="testing" class="mx-auto">
-        <div id="testing-controls">
+        <div id="testing-controls" style="visibility: hidden">
           <div class="left-controls">
             <div class="btn-group">
               <button type="button" id="button-add" class="btn btn-secondary">+</button>
