--- a/views/pages/information.ejs
+++ b/views/pages/information.ejs
@@ -5,6 +5,9 @@
   </head>
   <script>
   // Form submission code
+    function formAlert(message){
+      $('#form-alert').html('<div class="alert alert-danger" role="alert"><strong>Form error!</strong> ' + message + '</div>');
+    }
     function validateForm(){
       var elements = document.getElementById("info-form").elements;
       var form ={};
@@ -13,10 +16,9 @@
           form[item.name] = item.value;
       }
       // birthyear sex country
-      document.getElementById("demo").innerHTML = JSON.stringify(form);
       //TODO do some more validation here
-      if(form.birthyear == '' || isNaN(form.birthyear) || form.sexRadio == ''){
-        alert('You have to put in a birth year')
+      if(form.birthyear == '' || isNaN(form.birthyear) || form.sexRadio == '' || form.birthyear < 1880 || form.birthyear > 2017){
+        formAlert('You need to input a valid birthyear in the form YYYY (e.g 1998)');
       }else{
         //validating success
         $.ajax({
@@ -45,9 +47,10 @@
         <p class="lead">To carry on to the test you need to enter some information about yourself.</p>
       </div>
       <form class="content" id="info-form">
+        <div id="form-alert"></div>
         <div class="form-group row">
-          <label class="col-2 col-form-label" for="sexSelect">Sex</label>
-          <div class="col-10">
+          <label class="col-3 col-form-label" for="sexSelect">Sex</label>
+          <div class="col-9">
             <label class="form-check-label">
               <input type="radio" class="form-check-input" name="sex" id="sexMale" value="male">
               Male
@@ -59,14 +62,14 @@
           </div>
         </div>
         <div class="form-group row">
-          <label class="col-2 col-form-label" for="ageSelect">Birth year</label>
-          <div class="col-10">
+          <label class="col-3 col-form-label" for="ageSelect">Birth year</label>
+          <div class="col-9">
             <input class="form-control" name="birthyear" type="number">
           </div>
         </div>
         <div class="form-group row">
-          <label class="col-2 col-form-label" for="countrySelect">Country</label>
-          <div class="col-10">
+          <label class="col-3 col-form-label" for="countrySelect">Country</label>
+          <div class="col-9">
             <select class="form-control" id="countrySelect" name="country">
               <option value="AF">Afghanistan</option>
             	<option value="AX">Åland Islands</option>
@@ -320,9 +323,43 @@
             </select>
           </div>
         </div>
-        <p onclick='validateForm()' class="btn btn-primary">Submit form</p>
+        <div class="form-group row">
+          <label class="col-3 col-form-label" for="inputSelect">Type of input</label>
+          <div class="col-9">
+            <select class="form-control" id="inputSelect" name="input">
+              <option value="mouse">Mouse</option>
+              <option value="trackpad">Trackpad / Touchpad</option>
+              <option value="trackball">Trackball</option>
+              <option value="touchscreen">Touchscreen</option>
+              <option value="touchscreen">Pointing stick (clit mouse)</option>
+              <option value="touchscreen">Other</option>
+            </select>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col text-center"><p class="lead">Before the test, make sure</p></div>
+        </div>
+        <div class="row text-center">
+          <div class="col">
+            <img src="img/headphones.png" class="img-fluid" alt=""/>
+            <p class="text-center">That your headphones are plugged in and operational</p>
+          </div>
+          <div class="col text-center">
+            <img src="img/globe.png" class="img-fluid" alt=""/>
+            <p class="text-center">You understand that the data collected will be available publically</p>
+          </div>
+          <div class="col text-center">
+            <img src="img/cake.png" class="img-fluid" alt=""/>
+            <p class="text-center">That you are ready to push some buttons</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col text-center">
+            <h5>Alright?</h5>
+            <p onclick='validateForm()' class="btn btn-success">Take me to the test</p>
+          </div>
+        </div>
       </form>
-      <div id="demo"></div>
       <div class="row">
         <div class="col">
         <small>By continuing you accept that your ip may be recorded for the test, no other personal information will be saved other then the information given above, as well as your performance in the test that will be saved and stored in a database.</small>
