Fixed recursive object model

--- a/views/pages/information.ejs
+++ b/views/pages/information.ejs
@@ -356,7 +356,7 @@
         <div class="row">
           <div class="col text-center">
             <h5>Alright?</h5>
-            <p onclick='validateForm()' class="btn btn-success">Take me to the test</p>
+            <p onclick='validateForm()' class="btn btn-success btn-lg">Take me to the test</p>
           </div>
         </div>
       </form>
