--- a/views/pages/test.ejs
+++ b/views/pages/test.ejs
@@ -11,7 +11,7 @@
     <div id="test-info-box" style="visibility: hidden">
     </div>
     <div id="testing" class="mx-auto">
-        <div id="testing-controls" style="visibility: hidden">
+        <div id="testing-controls" style="display:none; visibility: hidden">
           <div class="left-controls">
             <div class="btn-group">
               <button type="button" id="button-add" class="btn btn-secondary">+</button>
@@ -30,13 +30,6 @@
         <canvas id="testing-area" width="512" height="512">
         </canvas>
       <br>
-      <div class="container">
-        <div id="game-info" class="row text-left">
-          <div id="game-score" class="col-md-4">score: 1</div>
-          <div id="game-level" class="col-md-4">level: 1</div>
-          <div id="game-next" class="col-md-4">next: !</div>
-        </div>
-      </div>
       <br>
     </div>
   </div>
