--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -25,8 +25,8 @@
         </div>
         <div class="col-md-8">
           <h4>Information</h4>
-          <p>This experiment was created for the course Student conference in Computing Science at Umeå University by Isidor Nygren, who is currently studying Interaction &amp; Design master program in the same university.</p>
-          <p>The objective of the test is to see if there is a functional link between frequency and amplitude modulation in conjunction with 2D positioned objects on a plane. And as a part of this test, you will press a series of buttons with a variable sound playing in the background whilst your timing and method will be recorded and stored.</p>
+          <p>This experiment was created for the course Student conference in Computing Science at Umeå University by Isidor Nygren, who is currently in the fifth year of the Interaction &amp; Design master program.</p>
+          <p>The objective of the test is to see if there is a significant correlation between frequency and amplitude modulation in conjunction with 2D positioned objects on a plane. And as a part of this test, you will press a series of buttons with a variable sound playing in the background whilst your timing and method will be recorded and stored.</p>
         </div>
         </div>
       </div>
