--- a/views/pages/information.ejs
+++ b/views/pages/information.ejs
@@ -346,7 +346,7 @@
           </div>
           <div class="col text-center">
             <img src="img/globe.png" class="img-fluid" alt=""/>
-            <p class="text-center">You understand that the data collected will be available publically</p>
+            <p class="text-center">You understand that the data collected will be available publicly</p>
           </div>
           <div class="col text-center">
             <img src="img/cake.png" class="img-fluid" alt=""/>
@@ -362,7 +362,7 @@
       </form>
       <div class="row">
         <div class="col">
-        <small>By continuing you accept that your ip may be recorded for the test, no other personal information will be saved other then the information given above, as well as your performance in the test that will be saved and stored in a database.</small>
+        <small>By continuing you accept that your ip may be recorded for the test, no other personal information will be saved other then the information given above, as well as your performance in the test. This information will be saved and stored in a database.</small>
       </div>
       </div>
     </div>
